MZ_0, fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
 }
 
 body {
-  overscroll-behavior-y: contain;
+  overflow: hidden;
 }
 
 a {
